[workspace]
members = [
    "02-panic-abort",
    "03-no-std",
    "04-raw-syscall",
    "09-tiny-yes",
    "10-tiny-base64",
    "11-tiny-hash",
    "12-tiny-random",
]
exclude = [
    "01-release-opts",
    "05-tiny-wasm",
    "06-build-std",
    "07-global-asm",
]
resolver = "2"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
