[workspace]
members = [
    "02-panic-abort",
    "03-no-std",
    "04-raw-syscall",
    "09-tiny-yes",
    "10-tiny-base64",
    "11-tiny-hash",
    "12-tiny-random",
    "13-xor-packer",
    "14-tiny-cat",
    "15-tiny-wc",
    "16-tiny-multicall",
    "17-tiny-alloc",
    "18-tiny-signal",
    "19-tiny-mmap",
    "20-tiny-server",
    "21-tiny-sha256",
    "22-tiny-pipe",
    "23-tiny-portscan",
    "24-tiny-sandbox",
    "25-tiny-udp-echo",
    "26-tiny-x11",
    "27-tiny-proxy",
    "28-tiny-revproxy",
    "29-tiny-lb",
    "30-tiny-lb-sticky",
    "31-tiny-smtp",
    "32-tiny-blockchain",
    "33-tiny-kv",
    "34-tiny-objstore",
    "35-tiny-transformer",
    "36-tiny-gpt2",
    "37-tiny-sql-db",
    "38-tiny-kafka-broker",
    "39-tiny-kafka-pubsub",
    "40-tiny-kafka-cluster",
]
exclude = [
    "01-release-opts",
    "05-tiny-wasm",
    "06-build-std",
    "07-global-asm",
]
resolver = "2"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
